# linear-containers

./: ChangeLog.md  README.md  cabal.project  linear-containers.cabal
examples/: basic.hs
src/Data/Linear/: Class.hs  Deallocation.hs  IntSet.hs  Ref.hs  Set.hs  State.hs  Struct.hs  Types.hs  Unsafe.hs
src/Data/Linear/Array/: Ref.hs  Struct.hs
src/Data/Semigroup/: Linear.hs
src/Linear/: Array.hs  Class.hs  Hybrid.hs  Identity.hs  List.hs  Reader.hs  Reference.hs  Slate.hs  Stack.hs  State.hs  Types.hs  Unsafe.hs
test/: Main.hs
