cabal-version: 2.4
name: linear-containers
version: 0.1.0.0
description: Containers on an unmanaged heap
homepage: https://github.com/andrewthad/linear-containers
bug-reports: https://github.com/andrewthad/linear-containers/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/linear-containers

library
  exposed-modules:
    Linear.Unsafe
    Linear.Reference
    Linear.Class
    Linear.Types
    Linear.List
    Linear.State
  hs-source-dirs:
      src
  ghc-options: -O0
  build-depends:
      base >=4.12 && <5
    , primitive >= 0.6.4
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -O2
  build-depends:
      base >=4.7 && <5
    , linear-containers
    , tasty
    , tasty-quickcheck
    , QuickCheck
  default-language: Haskell2010
